possible fix for duplicate scrollbars, grid layout instead of flew

--- a/tvguide-ng/src/app/tvguide/tvguide.component.scss
+++ b/tvguide-ng/src/app/tvguide/tvguide.component.scss
@@ -87,7 +87,6 @@
 // class for the next buttons in the selector boxes
 .but-next
 {
-
    opacity: inherit;  // nop value to avoid warnings
 }
 
@@ -110,34 +109,24 @@
 .container
 {
    height: 100%;
-   width: 100%;
-   overflow: none;
-   display: flex;
-   flex-direction: column;
-   flex-wrap: nowrap;
-   align-items: stretch;
-   align-content: stretch;
-   margin: 0px;
-
+   display: grid;
+   grid-template-rows: auto 1fr;
+   align-content: space-between;
 }
 
 .col-toolbar
 {
-   flex: none;
+   opacity: inherit;  // nop value to avoid warnings
 }
 
 .col-guidepageframe
 {
-   flex: 1 1 auto;
-   align-items: stretch;
-   overflow: none;
-   min-height: 0px;
-   margin: 0px;
+    overflow: hidden;
+    height: 100%;
 }
 
 .guidepageframe
 {
-   position: relative;
-   width: 98%;
-   height: 98%;
+   width: 100%;
+   height: 100%;
 }
