--- a/tvguide-ng/src/styles.scss
+++ b/tvguide-ng/src/styles.scss
@@ -26,7 +26,7 @@ html, body
 {
    height: 100%;
    min-height: 100%;
-   overflow: none;
+   overflow: hidden;
 }
 
 body
@@ -44,7 +44,7 @@ body
 .page
 {
    height: 100%;
-   overflow: none;
+   overflow: hidden;
 }
 // Below is content of otvguide stylesheet.css
 
